src/objects/TeacherLicensureArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>TeacherLicensurePkbView</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teacher_Licensure_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLDId__c</fullName>
        <label>OLD_Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Program of Focus for the Teacher Licensure Article</description>
        <inlineHelpText>Program of Focus for the Teacher Licensure Article</inlineHelpText>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>BAECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISPK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCCH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASS12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASSPX12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDEDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAELLP12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAME12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAME9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAMEK6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASE9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASEB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASECH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASEG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASEPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATELK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATELP8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATSC12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATSC9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SearchableCriteria__c</fullName>
        <label>Searchable Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The State that the Teacher Licensure Article is related to</description>
        <inlineHelpText>The State that the Teacher Licensure Article is related to</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington, D.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Teacher Licensure Article</label>
    <pluralLabel>Teacher Licensure Articles</pluralLabel>
</CustomObject>